# agnet_anomaly

./: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/graph/: __init__.py  builder.py  edges.py
backend/app/memory/: __init__.py  checkpointer.py  project_store.py
backend/app/models/: README.md  __init__.py
backend/app/nodes/: __init__.py  anomaly_detector.py  document_parser.py  draft_writer.py  final_export.py  fusion_node.py  human_approval.py  input_intake.py  input_router.py  pipeline_gates.py  planner_outline.py  retriever.py  reviewer_agent.py  revision_node.py  rule_checker.py  tabular_triage.py  text_normalizer.py  vision_analyzer.py
backend/app/retrieval/: README.md  __init__.py
backend/app/review/: __init__.py
backend/app/schemas/: __init__.py  inputs.py  reports.py  state.py
backend/app/services/: __init__.py  modality_detect.py
backend/app/utils/: state_serialize.py
backend/scripts/: _data_prep_utils.py  eval_anomaly.py  eval_end_to_end.py  eval_ocr.py  eval_report.py  eval_retrieval.py  eval_triage.py  prepare_ai4i.py  prepare_funsd.py  prepare_mvtec.py  prepare_visa.py
backend/tests/: test_graph_routing.py  test_health.py  test_state.py
data/integration_cases/: schema.json
docs/: architecture.md  datasets.md  evaluation.md  ui_guidelines.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApiStatusBanner.tsx  AppShell.tsx  (+1 more)
(+25 files in other folders)
